k8s/namespace-dsgov.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cwb03
  labels:
    name: cwb03
