k8s/pubsub-emulator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pubsub-emulator
  namespace: cwb03
  labels:
    app: gcloud-pubsub-emulator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gcloud-pubsub-emulator
  template:
    metadata:
      labels:
        app: gcloud-pubsub-emulator
    spec:
      containers:
        - name: pubsub-emulator
          image: gcr.io/google.com/cloudsdktool/google-cloud-cli:emulators
          command:
            - gcloud
            - beta
            - emulators
            - pubsub
            - start
            - --host-port=0.0.0.0:8085
          ports:
            - name: http
              containerPort: 8085
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
---
apiVersion: v1
kind: Service
metadata:
  name: pubsub-emulator-service
  namespace: cwb03
spec:
  selector:
    app: gcloud-pubsub-emulator
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
  sessionAffinity: None
  type: NodePort
